# libhy_mcu_bak_2

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac  haha  hy_mcu.pc.in
build-script/arterytek/at32f4xx/: Makefile.am
doc/: Makefile.am
doc/arterytek/at32f4xx/: .gitignore  Makefile.am
include/: Makefile.am  hy_func_check.h
keil_project/: Makefile.am
keil_project/arterytek/: Makefile.am  at32f4xx.uvoptx  install_libhy_mcu.bat
keil_project/at/: Makefile.am  at32f4xx.uvprojx
m4/: select_chip.m4  select_mcu.m4  (+2 more)
src/arterytek/: Makefile.am
src/arterytek/at32f4xx/: Makefile.am
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/: Makefile.am
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/: Makefile.am
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/AT32F4xx_StdPeriph_Driver/src/: Makefile.am
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/CoreSupport/: Makefile.am
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/: Makefile.am
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/startup/gcc/: Makefile.am  startup_at32f403accu7.s  startup_at32f403acet7.s  startup_at32f403argt7.s  startup_at32f403avct7.s  startup_at32f403cx_hd.s  startup_at32f403rx_hd.s  startup_at32f403rx_xl.s  startup_at32f403vx_hd.s  startup_at32f403vx_xl.s  startup_at32f403zx_xl.s  startup_at32f407avct7.s  startup_at32f407ret7.s  startup_at32f407rgt7.s  startup_at32f407vgt7.s  startup_at32f413cx_hd.s  startup_at32f413cx_md.s  startup_at32f415c8t7.s  startup_at32f415cbt7.s  startup_at32f415cbu7.s  startup_at32f415kbu7-4.s  startup_at32f415kcu7-4.s  startup_at32f415r8t7-7.s  startup_at32f415rbt7-7.s  startup_at32f415rbt7.s  startup_at32f415rct7-7.s  startup_at32f421c4t7.s  startup_at32f421f4p7.s  startup_at32f421f4u7.s  startup_at32f421f6p7.s  startup_at32f421f6u7.s  startup_at32f421f8p7.s  startup_at32f421g4u7.s  startup_at32f421g6u7.s  startup_at32f421k6t7.s  startup_at32f421k6u7-4.s  startup_at32f421k8t7.s  startup_at32f421k8u7-4.s  startup_at32f421pf8p7.s  startup_ts32f401cbu7.s
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/startup/gcc/linker/: Makefile.am
src/arterytek/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/startup/iar/: startup_at32f403acct7.s  startup_at32f403aceu7.s  startup_at32f403acgt7.s  startup_at32f403arct7.s  startup_at32f403avet7.s  startup_at32f403cx_hd.s  startup_at32f403cx_md.s  startup_at32f403cx_xl.s  startup_at32f403rx_hd.s  startup_at32f403vx_xl.s  startup_at32f407rct7.s  startup_at32f407rgt7.s  startup_at32f407vet7.s  startup_at32f413cx_hd.s  startup_at32f413kx_hd.s  startup_at32f413kx_md.s  startup_at32f413rx_hd.s  startup_at32f413tx_md.s  startup_at32f415c8t7.s  startup_at32f415cbt7.s  startup_at32f415cct7.s  startup_at32f415kbu7-4.s  startup_at32f415kcu7-4.s  startup_at32f415r8t7-7.s  startup_at32f415rct7.s  startup_at32f421c8t7.s  startup_at32f421f4u7.s  startup_at32f421f6u7.s  startup_at32f421f8p7.s  startup_at32f421g6u7.s  startup_at32f421g8u7.s  startup_at32f421k4t7.s  startup_at32f421k4u7.s  startup_ts32f401cbu7.s
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/AT32F4xx_StdPeriph_Driver/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/AT32F4xx_StdPeriph_Driver/inc/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/CoreSupport/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/startup/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/startup/gcc/: Makefile.am  startup_at32f403acct7.s  startup_at32f403aceu7.s  startup_at32f403acgt7.s  startup_at32f403acgu7.s  startup_at32f403arct7.s  startup_at32f403aret7.s  startup_at32f403avet7.s  startup_at32f403avgt7.s  startup_at32f403cx_md.s  startup_at32f403cx_xl.s  startup_at32f403zx_hd.s  startup_at32f407avgt7.s  startup_at32f407rct7.s  startup_at32f407vct7.s  startup_at32f407vet7.s  startup_at32f413kx_hd.s  startup_at32f413kx_md.s  startup_at32f413rx_hd.s  startup_at32f413rx_md.s  startup_at32f413tx_md.s  startup_at32f415cct7.s  startup_at32f415ccu7.s  startup_at32f415k8u7-4.s  startup_at32f415r8t7.s  startup_at32f415rct7.s  startup_at32f421c6t7.s  startup_at32f421c8t7.s  startup_at32f421f8u7.s  startup_at32f421g8u7.s  startup_at32f421k4t7.s  startup_at32f421k4u7-4.s  startup_at32f421k4u7.s  startup_at32f421k6u7.s  startup_at32f421k8u7.s  startup_at32f421pf4p7.s
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/startup/gcc/linker/: Makefile.am
src/at/at32f4xx/AT32F4xx_StdPeriph_Lib_V1.3.2/Libraries/CMSIS/CM4/DeviceSupport/startup/iar/: startup_at32f403accu7.s  startup_at32f403acet7.s  startup_at32f403acgu7.s  startup_at32f403aret7.s  startup_at32f403argt7.s  startup_at32f403avct7.s  startup_at32f403avgt7.s  startup_at32f403rx_xl.s  startup_at32f403vx_hd.s  startup_at32f403zx_hd.s  startup_at32f403zx_xl.s  startup_at32f407avct7.s  startup_at32f407avgt7.s  startup_at32f407ret7.s  startup_at32f407vct7.s  startup_at32f407vgt7.s  startup_at32f413cx_md.s  startup_at32f413rx_md.s  startup_at32f415cbu7.s  startup_at32f415ccu7.s  startup_at32f415k8u7-4.s  startup_at32f415r8t7.s  startup_at32f415rbt7-7.s  startup_at32f415rbt7.s  startup_at32f415rct7-7.s  startup_at32f421c4t7.s  startup_at32f421c6t7.s  startup_at32f421f4p7.s  startup_at32f421f6p7.s  startup_at32f421f8u7.s  startup_at32f421g4u7.s  startup_at32f421k4u7-4.s  startup_at32f421k6t7.s  startup_at32f421k6u7-4.s  startup_at32f421k6u7.s  startup_at32f421k8t7.s  startup_at32f421k8u7-4.s  startup_at32f421k8u7.s  startup_at32f421pf4p7.s  startup_at32f421pf8p7.s
(+10 files in other folders)
