# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    05/11 2021 20:21
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        05/11 2021      create the file
# 
#     last modified: 05/11 2021 20:21
# ===============================================================

# ------------------
# defining variables
# ------------------
_dist_files_com     =

# ---------------------
# add necessary content
# ---------------------
_dist_files_com     += \
                       README.md                                \
                       AT32F4xx_StdPeriph_Lib_V1.3.2.tar.bz2

EXTRA_DIST          = $(_dist_files_com)

